--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>{{TITLE}} | Carbon</title>
+    <title>{{TITLE}} | Standard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8/normalize.css">
     <link rel="stylesheet" href="https://unpkg.com/@phosphor-icons/web/src/regular/style.css">
     <link rel="stylesheet" href="https://unpkg.com/@phosphor-icons/web/src/bold/style.css">
@@ -43,7 +43,7 @@
             <div class="top-bar-left">
                 <a href="{{REL_ROOT}}index.html" class="logo">
                     <i class="ph ph-intersect"></i>
-                    <span>Carbon</span>
+                    <span>Standard</span>
                 </a>
             </div>
             <div class="top-bar-right">
@@ -70,7 +70,7 @@
                 </article>
 
                 <footer class="page-footer">
-                    <p>Carbon {{VERSION}} • Last built: {{LAST_BUILT}}</p>
+                    <p>Standard {{VERSION}} • Last built: {{LAST_BUILT}}</p>
                 </footer>
             </main>
         </div>
